--- a/css/style.css
+++ b/css/style.css
@@ -195,24 +195,6 @@ body{
     margin-bottom: 20px;
 }
 
-.first__bg {
-    background-image: url(../images/decor-bg.png);
-    background-size: cover;
-    background-position: center right;
-    background-repeat: no-repeat;
-    width: 560px;
-    height: 508px;
-    position: relative;
-    
-}
-
-.first__logo {
-    position: absolute;
-    top: 150px;
-    left: 240px;
-    z-index: -1;
-}
-
 /* ABOUT */
 
 .about {
@@ -227,13 +209,19 @@ body{
     margin-bottom: 84px;
 }
 
+.about__user {
+    padding: 0 10px 20px;
+}
+
 .about__inner {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .about__img {
     margin-bottom: 15px;
+    object-fit: cover;
 }
 
 .about__name {
@@ -249,28 +237,38 @@ body{
 }
 
 .news__inner {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
 }
+
 .news__item {
-    max-width: 360px;
-    position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
 }
-.news__img {
+
+.news__box {
     margin-bottom: 20px;
+    position: relative;
 }
+
+.news__img {
+    width: 100%;
+    object-fit: cover;
+}
+
 .news__desc {
     position: absolute;
+    width: 100%;
     font-size: 18px;
     line-height: 150%;
     color: #3F0E31;
-    right: 0px;
-    top: 237px;
+    right: 0;
+    bottom: 0;
     padding: 11px 90px 10px 25px;
     background: rgba(184, 126, 241, 0.8);
 }
+
 .news__text {
     font-size: 18px;
     line-height: 150%;
@@ -278,6 +276,7 @@ body{
     margin-bottom: 15px;
     flex-grow: 1;
 }
+
 .news__link {
     font-size: 18px;
     line-height: 22px;
@@ -291,7 +290,6 @@ body{
 }
 
 /* NEWS-PAGE */
-
 
 .breadcrumbs__inner {
     display: flex;
@@ -334,7 +332,7 @@ body{
 
 .article__item-right,
 .article__item-left {
-    max-width: 560px;
+    width: 560px;
     position: relative;
 }
 
@@ -343,6 +341,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding-bottom: 32px;
+    gap: 30px;
 }
 
 .article__text {
@@ -370,3 +369,112 @@ body{
     right: 870px;
     z-index: -1;
 }
+
+/* MEDIA */
+
+@media (max-width: 1400px) {
+    .article__item-right::after,
+    .article__item-left::after {
+        display: none;
+    }
+}
+
+@media (max-width: 1200px) {
+    .title__top {
+        font-size: 50px;
+        line-height: 60px;
+    }
+    .title {
+        text-align: center;
+    }
+    .news__inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .about__inner {
+        justify-content: center;
+    }
+    .about__name {
+        text-align: center;
+    }
+}
+
+@media (max-width: 1024px) {
+    .title {
+        font-size: 40px;
+        line-height: 50px;
+        margin-bottom: 44px;
+    }
+    .article {
+        padding-bottom: 70px;
+    }
+    .article__title {
+        max-width: 100%;
+        margin-bottom: 40px;
+    }
+    .article__item {
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 0;
+    }
+    .article__item-right, 
+    .article__item-left,
+    .article__img-box,
+    .article__img {
+        width: 100%;
+    }
+    .text-left {
+        order: -1;
+    } 
+    .first__inner {
+        flex-direction: column;
+        align-items: center;
+    }
+    .title__top {
+        margin-top: 0;
+    }
+    .about {
+        padding: 20px 0;
+    }
+    .breadcrumbs__inner {
+        padding: 20px 0;
+    }
+}
+
+@media (max-width: 768px) {
+    .title__top {
+        font-size: 32px;
+        line-height: 42px;
+    }
+    .news__inner {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .header__inner {
+        display: block;
+    }
+    .logo__img {
+        margin: 0 auto;
+        padding-bottom: 20px;
+    }
+    .article__title {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+    .first {
+        padding: 50px 0;
+    }
+}
+
+@media (max-width: 375px) {
+    .menu__item + .menu__item {
+        margin-left: 40px;
+    }
+    .title__top {
+        font-size: 24px;
+        line-height: 34px;
+    }
+}
+    
